# Sleepy-AI-Army

./: .example.aider.conf.yml  .example.aider.sleepy.conf.yml  .gitignore  01_vision-statement-full-project.md  01_vision-statement.md  BACKLOG backup.md  BACKLOG-long-term.md  BACKLOG.md  BACKLOG.md.example  BUGS.md  README.md  backlog.md  poc-4-arch-design.md  poc4-task-list-prd  prd.md  pyproject.toml  run-army-man-small-tweak.bat  run-general-on-mission.bat  run-general.bat  run-infantry.bat  run-poc-8.bat  run-secretary.bat  run_poc7.bat  tech-details-context.md
army-general/: config.yml  pyproject.toml
army-general/ai-docs/planning/: 01_vision-statement.md
army-general/src/: config.py  main.py
army-general/src/services/: __init__.py  git_service.py
army-general/src/utils/: logging_setup.py
poc-7-langgraph-aider/: .gitignore  README.md  aider-service-error-01.txt  config.yml  project-scaffolding.py  pyproject.toml
poc-7-langgraph-aider/.planning/: 01_vision-statement.md
poc-7-langgraph-aider/.planning/initial-implementation/: 03_prd.md  05_tech-architecture.md
poc-7-langgraph-aider/ai-commands/: create-architecture-brainstorming.md  create-new-spec-latest.md  create-new-spec-v1.md  create-new-spec-v2.md  create-new-spec-v3.md  list-files.md
poc-7-langgraph-aider/ai-docs/: aider-cli-usage.md  format-changelog.md  format-goal-manifest.md  jinja-sample-code.md  langraph-sample.py  pydantic-ai-best-practices.md  pydantic-ai-sample.py  pydantic-ai-sample_02.py  pydantic-ai-sample_03.py  uv-project-setup.md
poc-7-langgraph-aider/ai-docs/format-templates/: format-goal-manifest.md  format_changelog.md
poc-7-langgraph-aider/ai-docs/planning/01_manifest-and-changelist/: 02_feature-list.md  04_architecture-brainstorming.md  05_1_tech_architecture_overview.md  05_2-tech_architecture-flow.md  05_3-tech_architecture-file-structure.md
poc-7-langgraph-aider/ai-docs/planning/02_small-tweak-code-change/: 03_prd.md  04.1_architecture-brainstorming-feedback.md  05_1_tech_architecture_overview.md  05_2-tech_architecture-flow.md  05_3-tech_architecture-file-structure.md
poc-7-langgraph-aider/ai-docs/planning/03_manifest-generation-pydantic-ai/: 02_feature-list.md  03_prd.md  05_3-tech_architecture-file-structure.md
poc-7-langgraph-aider/ai-docs/planning/04-node-file-boilerplate-removal/: ai_agent_spec.txt  ai_agent_spec_v2.txt  brainstorming.txt  brainstorming_v2.txt  critique.txt  critique_v2.txt
poc-7-langgraph-aider/ai-specs/01_update-todos/: spec.md
poc-7-langgraph-aider/ai-specs/02-next-todos/: spec.md  spec.md - needs review
poc-7-langgraph-aider/ai-specs/03-services-graph-setup/: spec.md
poc-7-langgraph-aider/ai-specs/04-graph-invocation/: spec.md
poc-7-langgraph-aider/ai-specs/05-input-validation-node/: spec.md  spec.md - needs review
poc-7-langgraph-aider/ai-specs/06-implement-aider-service/: spec.md
poc-7-langgraph-aider/ai-specs/07-implement-changelog-service/: spec.md
poc-7-langgraph-aider/ai-specs/08-implement-generate-manifest-node/: spec.md
poc-7-langgraph-aider/ai-specs/09-implement-logging-to-files/: spec.md
poc-7-langgraph-aider/ai-specs/10-implement-git-service-tests/: spec.md
poc-7-langgraph-aider/ai-specs/11-implement-execute-small-tweak-node/: spec.md
poc-7-langgraph-aider/ai-specs/12-implement-llm-services/: spec.md
poc-7-langgraph-aider/ai-specs/13-implement-write-file-service/: spec.md
poc-7-langgraph-aider/ai-specs/14-manifest-generation-impl/: spec.md
poc-7-langgraph-aider/ai-specs/15-refactor-manifest-create-update/: spec.md
poc-7-langgraph-aider/src/: config.py  graph_builder.py  main.py  state.py
poc-7-langgraph-aider/src/ai-specs/: goal-manifest-creation-spec.md
poc-7-langgraph-aider/src/models/: aider_summary.py
poc-7-langgraph-aider/src/nodes/: __init__.py  finalization_nodes.py  initialization.py  manifest_create.py  manifest_generation.py  manifest_update.py  small_tweak_execution.py  validation.py
poc-7-langgraph-aider/src/pydantic_models/: core_schemas.py
poc-7-langgraph-aider/src/services/: __init__.py  aider_service.py  changelog_service.py  git_service.py  llm_prompt_service.py  write_file_from_template_service.py
poc-7-langgraph-aider/src/templates/: goal-manifest.j2
poc-7-langgraph-aider/src/utils/: custom_exceptions.py  logging_setup.py  node_error_handler.py  node_exception_handler.py
poc-7-langgraph-aider/templates/: goal-manifest.j2
poc-7-langgraph-aider/tests/: test_aider_service_command.py  test_aider_summary.py  test_changelog_service.py  test_git_service.py  test_llm_prompt_service.py  test_manifest_update_node.py  test_write_file_from_template_service.py
poc-7-langgraph-aider/tests/nodes/: __init__.py  test_small_tweak_execution.py
poc-7-langgraph-aider/tests/services/: test_aider_service.py
poc-7-langgraph-aider/tests/temp_write_service_test_data/output/: test_output.txt
poc-8-backlog-to-goals/: config.yaml  pyproject.toml
poc-8-backlog-to-goals/ai-docs/: todo.md
poc-8-backlog-to-goals/ai-docs/specs/: 01-cto-focused-recommendations.md  01-post-refactor-enhancements.md
poc-8-backlog-to-goals/src/: config.py  main.py  prompts.py
poc-8-backlog-to-goals/src/models/: goal_models.py
poc-8-backlog-to-goals/src/services/: __init__.py  backlog_processor.py  git_service.py  llm_prompt_service.py
poc-8-backlog-to-goals/src/utils/: __init__.py  logging_setup.py
poc-8-backlog-to-goals/tests/: conftest.py  test_backlog_processor.py  test_config.py  test_main_flow.py
poc-8-backlog-to-goals/tests/models/: __init__.py  test_goal_models.py
poc-8-backlog-to-goals/tests/services/: __init__.py  test_backlog_processor.py  test_llm_prompt_service.py
poc-9-async-langgraph-pydanticai/: .env.example  pyproject.toml  run_poc9.bat
poc-9-async-langgraph-pydanticai/ai-docs/: architectural-review.md
poc-9-async-langgraph-pydanticai/ai-docs/planning/: vision.md
poc-9-async-langgraph-pydanticai/src/: config.py  main.py  state.py
poc-9-async-langgraph-pydanticai/src/pydantic_models/: summaries.py
poc-9-async-langgraph-pydanticai/src/services/: llm_prompt_service.py
(+333 files in other folders)
