[project]
name = "poc7-langgraph-orchestrator"
version = "0.1.0"
description = "PoC7 LangGraph Orchestrator for initial document generation."
authors = [
  { name = "Thomas Silloway", email = "tcsillow@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GNU3" } 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langgraph",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
backend-path = ["."] # Specifies that pyproject.toml is at the root
